--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "gray-matter": "^4.0.3",
     "marked": "^4.0.12",
     "next": "^12.1.0",
     "react": "^17.0.2",
